@@ -3,6 +3,7 @@
 ## New features
 
 - Replaced `fe` parameter in fSRM by `drop`: Now the user can drop either the family effect, the actor, the partner effects, or the reciprocities when only three members are present.
+- New function equalMeans() tests actor and partner means for equality
 
 ## Changes
 
